1 Handle better image url fetch stage, beside the image loading stage, so that the loading animation is seen during both stages. 2 Prevent image overflow when the image is rotated, when the map is rotated. 3 More standard host binding structure in ansyn-loader component

--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
@@ -27,6 +27,8 @@
 		position: relative;
 		main {
 			min-height: @image-height;
+			// Prevent image overflow when the image is rotated, when the map is rotated
+			overflow: hidden;
 
 			p.error-text {
 				top: 50px;
